force-app/main/default/objects/EDealer_Tracking__c/EDealer_Tracking__c.object-meta.xml
<CustomObject>
    <label>Gateway Tracking</label>
    <nameField>
        <displayFormat>Track-{000}</displayFormat>
        <label>Gateway Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gateway Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>