force-app/main/default/objects/EDealer_Tracking__c/fields/Dealer_Group__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Group__c</fullName>
    <formula>Owner:User.Contact.Account.Group_Code__c</formula>
    <label>Dealer Group</label>
    <type>Text</type>
</CustomField>