force-app/main/default/objects/EDealer_Tracking__c/fields/Kenworth_User_Visited__c.field-meta.xml
<CustomField>
    <fullName>Kenworth_User_Visited__c</fullName>
    <label>Kenworth User Visited</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>