force-app/main/default/objects/EDealer_Tracking__c/fields/Number_of_User__c.field-meta.xml
<CustomField>
    <fullName>Number_of_User__c</fullName>
    <description>It will store number of users access to edealer dashboard which belong to particular division.</description>
    <label>Number of User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>