force-app/main/default/objects/EDealer_Tracking__c/fields/Number_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Visit__c</fullName>
    <label>Number of Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>