force-app/main/default/objects/EDealer_Tracking__c/fields/Peterbilt_User_Visited__c.field-meta.xml
<CustomField>
    <fullName>Peterbilt_User_Visited__c</fullName>
    <label>Peterbilt User Visited</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>