force-app/main/default/objects/EDealer_Tracking__c/fields/Time_Spent_In_Secs__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_In_Secs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Time Spent (In Secs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>