force-app/main/default/objects/EDealer_Tracking__c/fields/Tracking_Details__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Details__c</fullName>
    <label>Tracking Details</label>
    <length>200</length>
    <type>Text</type>
</CustomField>