force-app/main/default/objects/EDealer_Tracking__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>