force-app/main/default/objects/EDealer_Tracking__c/fields/User_ASI__c.field-meta.xml
<CustomField>
    <fullName>User_ASI__c</fullName>
    <label>User ASI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>