force-app/main/default/objects/EDealer_Tracking__c/fields/User_Division__c.field-meta.xml
<CustomField>
    <fullName>User_Division__c</fullName>
    <label>User Division</label>
    <length>20</length>
    <type>Text</type>
</CustomField>