force-app/main/default/objects/EDealer_Tracking__c/fields/User_Primary_Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>User_Primary_Dealer_Code__c</fullName>
    <label>User Primary Dealer Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>